--- a/14-MVC/package.json
+++ b/14-MVC/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "11--",
+  "name": "14-mvc",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
