--- a/17-1-practice/package.json
+++ b/17-1-practice/package.json
@@ -7,7 +7,7 @@
     "sequelize": "^6.35.1",
     "sequelize-cli": "^6.6.2"
   },
-  "name": "17-sequelize",
+  "name": "15-mvc-mysql-practice",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
