--- a/(result)16-sequelize-upgrade/config/config.json
+++ b/(result)16-sequelize-upgrade/config/config.json
@@ -4,8 +4,7 @@
     "password": "user1234",
     "database": "kdt2",
     "host": "127.0.0.1",
-    "dialect": "mysql",
-    "timezone": "Asia/Seoul"
+    "dialect": "mysql"
   },
   "production": {},
   "test": {}
