--- a/00-혼자복습해보기/node.js 복습/package.json
+++ b/00-혼자복습해보기/node.js 복습/package.json
@@ -4,11 +4,9 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
-    "nodemon": "^3.0.2",
-    "sequelize": "^6.35.1",
-    "sequelize-cli": "^6.6.2"
+    "nodemon": "^3.0.2"
   },
-  "name": "node.js",
+  "name": "node-practice",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
